# neps

./: .editorconfig  .git-cliff.toml  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  cliff.toml  graph.py  graph_playground.py  index.html  latest  mkdocs.yml  perf.py  pyproject.toml  run_all_valid_experiments.bat  sitemap.xml  t.py  test.ipynb  test_all_pickle.py  test_graph.py  test_normalization_fix.py  versions.json
.github/: dependabot.yml
.github/workflows/: Tests.yaml  check-changelog.yaml  check-notebooks.yml  continuous_integration.yaml  generate-notebooks.yml  pr-conventional-commit.yml  pre-commit.yaml  tests.yaml  update-changelog.yaml
0.10.0/: index.html
0.10.0/contributing/: index.html
0.10.0/getting_started/: index.html
0.10.0/run_pipeline/: index.html
0.10.0/search/: search_index.json
0.11.0/: 404.html  index.html
0.11.0/alternatives/: index.html
0.11.0/analyse/: index.html
0.11.0/citations/: index.html
0.11.0/contributing/: index.html
0.11.0/getting_started/: index.html
0.11.0/neps_run/: index.html
0.11.0/parallelization/: index.html
0.11.0/pipeline_space/: index.html
0.11.0/run_pipeline/: index.html
0.11.0/search/: search_index.json
0.11.1/: 404.html  index.html
0.11.1/analyse/: index.html
0.11.1/contributing/: index.html
0.11.1/installation/: index.html
0.11.1/neps_run/: index.html
0.11.1/pipeline_space/: index.html
0.12.0/: 404.html  index.html  objects.inv
0.12.0/api/: index.html
0.12.0/citations/: index.html
0.12.0/examples/: index.html
0.12.0/getting_started/: index.html
0.12.0/search/: search_index.json
0.12.1/: 404.html  index.html
0.12.1/search/: search_index.json
0.12.2/: 404.html  index.html  objects.inv
0.12.2/_code/: api_generator.py  example_generator.py
0.12.2/api/: index.html
0.12.2/citations/: index.html
0.12.2/doc_yamls/: customizing_neps_optimizer.yaml  loading_own_optimizer.yaml  loading_pipeline_space_dict.yaml  outsourcing_pipeline_space.yaml  run_pipeline_big_search_space.py
0.12.2/examples/: index.html
0.12.2/getting_started/: index.html
0.12.2/search/: search_index.json
0.13.0/: 404.html  index.html  objects.inv
0.13.0/api/: index.html
0.13.0/citations/: index.html
0.13.0/examples/: index.html
0.13.0/getting_started/: index.html
0.13.0/search/: search_index.json
0.14.0/: 404.html  index.html  objects.inv
0.14.0/citations/: index.html
0.14.0/examples/: index.html
0.14.0/getting_started/: index.html
0.14.0/search/: search_index.json
0.15.0/: 404.html  index.html  objects.inv
0.15.0/citations/: index.html
0.15.0/examples/: index.html
0.15.0/getting_started/: index.html
0.15.0/search/: search_index.json
0.15.0/stylesheets/: custom.css
0.16.0/: 404.html  index.html
0.16.0/_code/: api_generator.py
0.16.0/citations/: index.html
0.16.0/examples/: index.html
0.16.0/getting_started/: index.html
0.16.0/search/: search_index.json
0.16.1/: index.html
0.16.1/search/: search_index.json
0.4.10/: 404.html
0.4.10/alternatives/: index.html
0.4.10/analyse/: index.html
0.5.1/: 404.html  index.html
0.6.0/: 404.html  index.html  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.7.0/: index.html  sitemap.xml
0.8.0/: sitemap.xml
0.8.1/: sitemap.xml
0.8.2/: sitemap.xml
0.8.3/: 404.html  index.html  sitemap.xml
CONTRIBUTING/: index.html
alternatives/: index.html
analyse/: index.html
cnas_examples/: dummy.py  nasbench_optimization.py  plot_incumbent.py
comprehensive_nas/: LICENSE  README.md  __init__.py  api.py  configspace.json  easy_job.sh  hpo_synthetic_job.sh  nasbench_optimization.py  nasbowl_job.sh  optimizer.py  plot_incumbent.py  requirements.txt  sampler.py
contributing/: index.html
demo/: nasbench_optimization.py  plot_incumbent.py
docs/: CONTRIBUTING.md  README.md  alternatives.md  analyse.md  citations.md  getting_started.md  index.md  installation.md  mkdocs.yml  neps_run.md  optimizers.md  parallelization.md  pipeline_space.md  run_pipeline.md  todo.md
examples/: nasbench_optimization.py
getting_started/: index.html
grakel_replace/: context_managers.py  grakel_wl_usage_example.py  graph_aware_gp_optimization_example.py  kernels.py  mixed_single_task_gp.py  mixed_single_task_gp_usage_example.py  optimization.py  optimize.py  single_task_gp_usage_example.py  torch_wl_kernel.py  torch_wl_usage_example.py  utils.py
install_dev_utils/: install_torch.py  miniconda.sh  poetry.sh  torch_error_message.py
latest/: 404.html  index.html  objects.inv
master/: 404.html  index.html  objects.inv
neps/: NOTICE  __init__.py  api.py  distributions.py  env.py  exceptions.py  normalization.py  priors.py  runtime.py  status.py  types.py  validation.py
neps_cluster/: __init__.py  job_submitter.py  neps_async_evaluator.py  slurm.py  slurm_config.py  slurm_script_builders.py
neps_examples/: README.md  __init__.py  __main__.py
neps_run/: index.html
parallelization/: index.html
pipeline_space/: index.html
run_pipeline/: index.html
search/: search_index.json
status/: index.html
test0.16/: 404.html  objects.inv
tests/: joint_config_space.py  losses.json  regression_objectives.py  regression_runner.py  settings.py  test_botorch_wl_kernel.py  test_config_encoder.py  test_domain.py  test_examples.py  test_graph.py  test_mixed_single_task_gp.py  test_optimization_over_graphs.py  test_regression.py  test_rng.py  test_samplers.py  test_search_space.py  test_search_space_functions.py  test_search_space_parsing.py  test_torch_wl_kernel.py  test_user_parse_result.py
tests_tmpdir/: test_core_examples_basic_usagecurrent  test_core_examples_experimentacurrent  test_core_examples_expert_priocurrent  test_core_examples_multi_fidelcurrent
todo/: index.html
tutorials/: 1_getting_started_hpo.ipynb  1_getting_started_hpo.py  2_search_spaces.ipynb  2_search_spaces.py  3_efficiency_techniques.ipynb  3_efficiency_techniques.py  README.md  model.py  train.py  unified_tutorial.py  utils.py
v0.12.2/: objects.inv
(+2715 files in other folders)
